react-microservices/k8s/base/react-microservices/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: react-service
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: react
