react-microservices/k8s/base/react-microservices/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: react-service
                port:
                  number: 80
          - path: /home(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: react-service
                port:
                  number: 80
          - path: /dashboard(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: react-service
                port:
                  number: 80                
          - path: /register
            pathType: Prefix
            backend:
              service:
                name: react-service
                port:
                  number: 80
          - path: /admin-page
            pathType: Prefix
            backend:
              service:
                name: react-service
                port:
                  number: 80
          - path: /teams/get(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: react-service
                port:
                  number: 80        
          - path: /users/get(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: react-service
                port:
                  number: 80
          - path: /users/update(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: react-service
                port:
                  number: 80
          - path: /issues/update(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: react-service
                port:
                  number: 80
